--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -1,6 +1,22 @@
 .container {
   padding: 2rem;
+  height: 100%;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  box-sizing: border-box;
+  gap: 1rem;
 }
+
+.content {
+  display: flex;
+  height: 80%;
+  gap: 1rem;
+}
+
 .container h1 {
   color: #f8f8f8;
+  font-size: 4.5rem;
 }
