--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -17,6 +17,13 @@
 }
 
 .container h1 {
-  color: #f8f8f8;
+  color: #eff1ed;
   font-size: 4.5rem;
+}
+
+.players {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
