--- a/src/components/Board/Board.module.scss
+++ b/src/components/Board/Board.module.scss
@@ -14,6 +14,7 @@
   background-color: #36454f;
   border-radius: 50%;
   transition: all 0.2s;
+  box-shadow: 0 0 10px gray;
   cursor: pointer;
 }
 
@@ -32,6 +33,7 @@
   width: 14%;
   transition: all 0.2s;
   border-radius: 0.5rem;
+  cursor: pointer;
   justify-content: space-between;
 }
 
