--- a/src/components/Board/Board.module.scss
+++ b/src/components/Board/Board.module.scss
@@ -9,6 +9,12 @@
   border-radius: 1rem;
 }
 
+.containerEnd {
+  @extend .container;
+  pointer-events: none;
+  opacity: 0.8;
+}
+
 .slot {
   height: 15%;
   background-color: #36454f;
