--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+@media only screen and (max-width: 1600px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 1400px) {
+  html {
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  html {
+    font-size: 10px;
+  }
+}
